Fedora entry added. Still some problems though.

--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -1,3 +1,9 @@
+menuentry "Fedora 16 Live 64bit" {
+          loopback loop /disks/Fedora-16-x86_64-Live-Desktop.iso
+          linux (loop)/isolinux/vmlinuz0 root=live:LABEL=Bootstick boot=isolinux iso-scan/filename=/disks/Fedora-16-x86_64-Live-Desktop.iso noeject noprompt rd.luks=0 rd.md=0 rd.dm=0--
+          initrd (loop)/isolinux/initrd0.img
+}
+
 menuentry "Kubuntu Live 11.10 64bit" {
           loopback loop /disks/kubuntu-11.10-desktop-amd64.iso
           linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=/disks/kubuntu-11.10-desktop-amd64.iso noeject noprompt--
