Ubuntu 11.10 alternate install menu option

--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -27,3 +27,10 @@ menuentry "Ubuntu Live 11.10 32bit" {
           linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=/disks/ubuntu-11.10-desktop-i386.iso noeject noprompt--
           initrd (loop)/casper/initrd.lz
 }
+
+menuentry "Ubuntu Alternate 11.10 32bit" {
+          set gfxpayload=keep
+          loopback loop /disks/ubuntu-11.10-alternate-i386.iso
+          linux (loop)/install/vmlinuz  iso-scan/filename=/disks/ubuntu-11.10-alternate-i386.iso file=/cdrom/preseed/ubuntu.seed quiet --
+          initrd (loop)/install/initrd.gz
+}
