Added SeaTools hard drive diagnostics utils
Download SeaTools from:
http://www.seagate.com/www/en-us/support/downloads/seatools

SeaTools boot from Grub2 is done with syslinux memdisk, so the same
technique could be applied to other DOS floppy or cdrom images also.

--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -34,3 +34,8 @@ menuentry "Ubuntu Alternate 11.10 32bit" {
           linux (loop)/install/vmlinuz  iso-scan/filename=/disks/ubuntu-11.10-alternate-i386.iso file=/cdrom/preseed/ubuntu.seed quiet --
           initrd (loop)/install/initrd.gz
 }
+
+menuentry "SeaTools" {
+          linux16 /disks/memdisk bigraw
+          initrd16 /disks/SeaTools.img
+}
